force-app/main/default/objects/DM_PrimaryObject_Query_Generator__c/DM_PrimaryObject_Query_Generator__c.object-meta.xml
<CustomObject>
    <label>DM PrimaryObject Query Generator</label>
    <nameField>
        <label>DM PrimaryObject Query Generator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM PrimaryObject Query Generators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>