force-app/main/default/objects/DM_PrimaryObject_Query_Generator__c/fields/DM_Active__c.field-meta.xml
<CustomField>
    <fullName>DM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if do not need to query an object,mark this checkbox as false</description>
    <label>DM Active</label>
    <type>Checkbox</type>
</CustomField>