force-app/main/default/objects/DM_PrimaryObject_Query_Generator__c/fields/DM_isChild_of_anotherObject__c.field-meta.xml
<CustomField>
    <fullName>DM_isChild_of_anotherObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM isChild of anotherObject</label>
    <type>Checkbox</type>
</CustomField>