force-app/main/default/objects/DM_PrimaryObject_Query_Generator__c/fields/DM_object_name__c.field-meta.xml
<CustomField>
    <fullName>DM_object_name__c</fullName>
    <label>DM object name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>