force-app/main/default/objects/DM_PrimaryObject_Query_Generator__c/fields/DM_Parent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_Parent_API_Name__c</fullName>
    <label>DM Parent API Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>